民國轉西元

--- a/ver1.ipynb
+++ b/ver1.ipynb
@@ -19,7 +19,8 @@
     "+ 1. 資料前處理\n",
     "    + 1.1 基本資料介紹\n",
     "    + 1.2 資料清理\n",
-    "    + 1.3 文章斷詞\n",
+    "    + 1.3 日期處理\n",
+    "    + 1.4 日誌內容斷詞\n",
     "+ 2. lexicon-base 情緒分析\n",
     "    + 2.1 準備台大情緒字典\n",
     "    + 2.2 情緒字典與斷詞結果進行合併\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +54,7 @@
        "'c:\\\\Users\\\\betty\\\\D\\\\資管所\\\\社群媒體分析\\\\期中專案'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "#匯入資料\n",
-    "MetaData1 = pd.read_csv('./raw_data/Meta-1.csv', encoding='UTF-8')\n",
+    "MetaData = pd.read_csv('./raw_data/Meta-1.csv', encoding='UTF-8')\n",
     "# MetaData2 = pd.read_csv('./raw_data/Meta-2.csv', encoding='UTF-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,43 +136,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MetaData' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-e713b04aefa8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"共有 {MetaData.shape[0]} 篇文章\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#(row,column)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mMetaData\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MetaData' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"共有 {MetaData.shape[0]} 篇文章\") #(row,column)\n",
-    "MetaData.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1495, 10)\n"
+      "共有 354 篇日誌\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artDate</th>\n",
+       "      <th>year</th>\n",
+       "      <th>intern_id</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12/05-12/11</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12/12-12/18</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>快到聖誕節了，每間店開始以了聖誕節的氣方以及裝飾，這禮拜不忘要跟客人推薦聖誕節蛋糕，但是自己...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12/19-12/25</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       artDate  year  intern_id  \\\n",
+       "0  12/05-12/11   109          1   \n",
+       "1  12/12-12/18   109          1   \n",
+       "2  12/19-12/25   109          1   \n",
+       "\n",
+       "                                             content  \n",
+       "0  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...  \n",
+       "1  快到聖誕節了，每間店開始以了聖誕節的氣方以及裝飾，這禮拜不忘要跟客人推薦聖誕節蛋糕，但是自己...  \n",
+       "2  這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢...  "
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "MetaData = MetaData.loc[MetaData['sentence'].str.contains(toMatch) | MetaData['artTitle'].str.contains(toMatch), :]\n",
-    "MetaData.reset_index(inplace=True, drop=True) #重設index\n",
-    "print(MetaData.shape)"
+    "print(f\"共有 {MetaData.shape[0]} 篇日誌\") #(row,column)\n",
+    "MetaData.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 每天content的數量\n",
+    "# MetaData = MetaData.loc[MetaData['content'].str.contains(toMatch) | MetaData['artDate'].str.contains(toMatch), :]\n",
+    "# MetaData.reset_index(inplace=True, drop=True) #重設index\n",
+    "# print(MetaData.shape)"
    ]
   },
   {
@@ -185,26 +244,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 移除內容為na值的資料\n",
-    "MetaData.dropna(subset = [\"內容\"], inplace=True)"
+    "MetaData.dropna(subset = [\"content\"], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MetaData['內容'] = MetaData.內容.apply(lambda x: re.sub('[^\\u4e00-\\u9fa5]+', '', x))"
+    "MetaData['content'] = MetaData.content.apply(lambda x: re.sub('[^\\u4e00-\\u9fa5]+', '', x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -228,81 +287,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>artTitle</th>\n",
        "      <th>artDate</th>\n",
-       "      <th>artTime</th>\n",
-       "      <th>artUrl</th>\n",
-       "      <th>artPoster</th>\n",
-       "      <th>artCat</th>\n",
-       "      <th>commentNum</th>\n",
-       "      <th>push</th>\n",
-       "      <th>boo</th>\n",
-       "      <th>sentence</th>\n",
+       "      <th>year</th>\n",
+       "      <th>intern_id</th>\n",
+       "      <th>content</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[問卦]爭鮮除了鮭魚是不是沒東西吃了</td>\n",
-       "      <td>2021/3/10</td>\n",
-       "      <td>10:40:11</td>\n",
-       "      <td>https://www.ptt.cc/bbs/Gossiping/M.1615372814....</td>\n",
-       "      <td>aynmeow</td>\n",
-       "      <td>Gossiping</td>\n",
-       "      <td>20</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>安安阿肥我在爭鮮啦吃了盤快飽其中盤是鮭魚沒錯除了鮭魚其他都難吃不懂那些拿鮪魚拿手捲的人在想什...</td>\n",
+       "      <td>12/05-12/11</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[問卦]鮭魚煮熟為啥跟垃圾一樣？</td>\n",
-       "      <td>2021/3/12</td>\n",
-       "      <td>09:48:04</td>\n",
-       "      <td>https://www.ptt.cc/bbs/Gossiping/M.1615542487....</td>\n",
-       "      <td>frzqp3814396</td>\n",
-       "      <td>Gossiping</td>\n",
-       "      <td>37</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>鮭魚生魚片超好吃完全不雷但鮭魚不管煮湯還是用煎的怎麼吃起來就普普通通尤其魚腥味很難去除有沒有八卦</td>\n",
+       "      <td>12/12-12/18</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>快到聖誕節了每間店開始以了聖誕節的氣方以及裝飾這禮拜不忘要跟客人推薦聖誕節蛋糕但是自己站店還...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[問卦]雞蛋是素的為什麼魚卵是葷的???</td>\n",
-       "      <td>2021/3/12</td>\n",
-       "      <td>16:48:43</td>\n",
-       "      <td>https://www.ptt.cc/bbs/Gossiping/M.1615567725....</td>\n",
-       "      <td>eddisontw</td>\n",
-       "      <td>Gossiping</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
+       "      <td>12/19-12/25</td>\n",
+       "      <td>109</td>\n",
        "      <td>1</td>\n",
-       "      <td>很多人吃雞蛋都說雞蛋是素的因為沒有受精魚卵未產卵前也沒有受精阿像是鮭魚卵魚子醬明太子可是吃素...</td>\n",
+       "      <td>這個月開始要衝刺聖誕節蛋糕的預購發現在一人店根本不知道到底活動內容以及折扣跟優惠當客人詢問時...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               artTitle    artDate   artTime  \\\n",
-       "0    [問卦]爭鮮除了鮭魚是不是沒東西吃了  2021/3/10  10:40:11   \n",
-       "1      [問卦]鮭魚煮熟為啥跟垃圾一樣？  2021/3/12  09:48:04   \n",
-       "2  [問卦]雞蛋是素的為什麼魚卵是葷的???  2021/3/12  16:48:43   \n",
+       "       artDate  year  intern_id  \\\n",
+       "0  12/05-12/11   109          1   \n",
+       "1  12/12-12/18   109          1   \n",
+       "2  12/19-12/25   109          1   \n",
        "\n",
-       "                                              artUrl     artPoster     artCat  \\\n",
-       "0  https://www.ptt.cc/bbs/Gossiping/M.1615372814....       aynmeow  Gossiping   \n",
-       "1  https://www.ptt.cc/bbs/Gossiping/M.1615542487....  frzqp3814396  Gossiping   \n",
-       "2  https://www.ptt.cc/bbs/Gossiping/M.1615567725....     eddisontw  Gossiping   \n",
-       "\n",
-       "   commentNum  push  boo                                           sentence  \n",
-       "0          20     8    2  安安阿肥我在爭鮮啦吃了盤快飽其中盤是鮭魚沒錯除了鮭魚其他都難吃不懂那些拿鮪魚拿手捲的人在想什...  \n",
-       "1          37     8   10   鮭魚生魚片超好吃完全不雷但鮭魚不管煮湯還是用煎的怎麼吃起來就普普通通尤其魚腥味很難去除有沒有八卦  \n",
-       "2          11     3    1  很多人吃雞蛋都說雞蛋是素的因為沒有受精魚卵未產卵前也沒有受精阿像是鮭魚卵魚子醬明太子可是吃素...  "
+       "                                             content  \n",
+       "0  開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...  \n",
+       "1  快到聖誕節了每間店開始以了聖誕節的氣方以及裝飾這禮拜不忘要跟客人推薦聖誕節蛋糕但是自己站店還...  \n",
+       "2  這個月開始要衝刺聖誕節蛋糕的預購發現在一人店根本不知道到底活動內容以及折扣跟優惠當客人詢問時...  "
       ]
      },
+     "execution_count": 207,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -313,7 +344,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 文章斷詞\n",
+    "### 1.3 日期處理\n",
+    "- artDate取起始日\n",
+    "- year從民國轉成西元\n",
+    "- 合併artDate跟year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MetaData['artDate']=MetaData.artDate.apply(lambda x: x.split('-')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      12/05\n",
+       "1      12/12\n",
+       "2      12/19\n",
+       "3      12/26\n",
+       "4      01/02\n",
+       "       ...  \n",
+       "349    02/15\n",
+       "350    03/22\n",
+       "351    03/22\n",
+       "352    03/22\n",
+       "353    03/22\n",
+       "Name: artDate, Length: 354, dtype: object"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MetaData['artDate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2020\n",
+       "1      2020\n",
+       "2      2020\n",
+       "3      2020\n",
+       "4      2021\n",
+       "       ... \n",
+       "349    2021\n",
+       "350    2021\n",
+       "351    2021\n",
+       "352    2021\n",
+       "353    2021\n",
+       "Name: year, Length: 354, dtype: int64"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MetaData['year']=MetaData.year.apply(lambda x: x + 1911)\n",
+    "MetaData['year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2020/12/05\n",
+       "1      2020/12/12\n",
+       "2      2020/12/19\n",
+       "3      2020/12/26\n",
+       "4      2021/01/02\n",
+       "          ...    \n",
+       "349    2021/02/15\n",
+       "350    2021/03/22\n",
+       "351    2021/03/22\n",
+       "352    2021/03/22\n",
+       "353    2021/03/22\n",
+       "Name: artDate, Length: 354, dtype: object"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MetaData['artDate']=MetaData['year'].apply(str)+'/'+MetaData['artDate']\n",
+    "MetaData['artDate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2020-12-05\n",
+       "1     2020-12-12\n",
+       "2     2020-12-19\n",
+       "3     2020-12-26\n",
+       "4     2021-01-02\n",
+       "         ...    \n",
+       "349   2021-02-15\n",
+       "350   2021-03-22\n",
+       "351   2021-03-22\n",
+       "352   2021-03-22\n",
+       "353   2021-03-22\n",
+       "Name: artDate, Length: 354, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#轉換日期格式\n",
+    "MetaData['artDate'] = pd.to_datetime(MetaData['artDate'], format=\"%Y/%m/%d\")\n",
+    "MetaData['artDate']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 日誌內容斷詞\n",
     "中文文集我們使用`jieba`套件進行斷詞與移除停用字"
    ]
   },
@@ -490,16 +668,6 @@
    ],
    "source": [
     "MetaData_token.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#轉換日期格式\n",
-    "data['artDate'] = pd.to_datetime(data['artDate'], format=\"%Y/%m/%d\")"
    ]
   },
   {
@@ -826,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
