--- a/ver1.ipynb
+++ b/ver1.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "2  這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>artDate</th>\n",
-       "      <th>year</th>\n",
        "      <th>intern_id</th>\n",
        "      <th>content</th>\n",
        "    </tr>\n",
@@ -254,22 +253,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>107年7月8日</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/8</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>107年7月15日</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/15</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>107年7月22日</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/22</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客...</td>\n",
        "    </tr>\n",
@@ -278,18 +274,13 @@
        "</div>"
       ],
       "text/plain": [
-       "     artDate  year  intern_id  \\\n",
-       "0   107年7月8日   107         18   \n",
-       "1  107年7月15日   107         18   \n",
-       "2  107年7月22日   107         18   \n",
-       "\n",
-       "                                             content  \n",
-       "0  7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...  \n",
-       "1  7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...  \n",
-       "2  7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客...  "
+       "     artDate  intern_id                                            content\n",
+       "0   2018/7/8         18  7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...\n",
+       "1  2018/7/15         18  7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...\n",
+       "2  2018/7/22         18  7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +318,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把\"year\"欄位的民國年轉成西元年\n",
+    "MetaData1['year'] = MetaData1.year.apply(lambda x: x + 1911)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#將年份欄位與開始日期合併\n",
+    "MetaData1['artDate'] = MetaData1['year'].apply(str) + '/' + MetaData1['artDate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#刪除\"year\"欄位\n",
+    "MetaData1 = MetaData1.drop(\"year\", axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +373,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>artDate</th>\n",
-       "      <th>year</th>\n",
        "      <th>intern_id</th>\n",
        "      <th>content</th>\n",
        "    </tr>\n",
@@ -360,22 +380,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12/05</td>\n",
-       "      <td>109</td>\n",
+       "      <td>2020/12/05</td>\n",
        "      <td>1</td>\n",
        "      <td>開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12/12</td>\n",
-       "      <td>109</td>\n",
+       "      <td>2020/12/12</td>\n",
        "      <td>1</td>\n",
        "      <td>快到聖誕節了，每間店開始以了聖誕節的氣方以及裝飾，這禮拜不忘要跟客人推薦聖誕節蛋糕，但是自己...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>12/19</td>\n",
-       "      <td>109</td>\n",
+       "      <td>2020/12/19</td>\n",
        "      <td>1</td>\n",
        "      <td>這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢...</td>\n",
        "    </tr>\n",
@@ -384,13 +401,13 @@
        "</div>"
       ],
       "text/plain": [
-       "  artDate  year  intern_id                                            content\n",
-       "0   12/05   109          1  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...\n",
-       "1   12/12   109          1  快到聖誕節了，每間店開始以了聖誕節的氣方以及裝飾，這禮拜不忘要跟客人推薦聖誕節蛋糕，但是自己...\n",
-       "2   12/19   109          1  這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢..."
+       "      artDate  intern_id                                            content\n",
+       "0  2020/12/05          1  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...\n",
+       "1  2020/12/12          1  快到聖誕節了，每間店開始以了聖誕節的氣方以及裝飾，這禮拜不忘要跟客人推薦聖誕節蛋糕，但是自己...\n",
+       "2  2020/12/19          1  這個月開始要衝刺聖誕節蛋糕的預購，發現在一人店根本不知道到底活動內容以及折扣跟優惠，當客人詢..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,12 +430,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MetaData2['artDate'] = MetaData2.artDate.apply(lambda x: re.sub('[\\u4e00-\\u9fa5]+', '/', str(x))[4:-1])"
+    "# MetaData2['artDate'] = MetaData2.artDate.apply(lambda x: re.sub('[\\u4e00-\\u9fa5]+', '/', str(x))[4:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +460,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>artDate</th>\n",
-       "      <th>year</th>\n",
        "      <th>intern_id</th>\n",
        "      <th>content</th>\n",
        "    </tr>\n",
@@ -451,22 +467,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7/8</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/8</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7/15</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/15</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7/22</td>\n",
-       "      <td>107</td>\n",
+       "      <td>2018/7/22</td>\n",
        "      <td>18</td>\n",
        "      <td>7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客...</td>\n",
        "    </tr>\n",
@@ -475,13 +488,13 @@
        "</div>"
       ],
       "text/plain": [
-       "  artDate  year  intern_id                                            content\n",
-       "0     7/8   107         18  7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...\n",
-       "1    7/15   107         18  7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...\n",
-       "2    7/22   107         18  7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客..."
+       "     artDate  intern_id                                            content\n",
+       "0   2018/7/8         18  7月開始是大四實習的第一個月，這個禮拜帶了兩個新人去公司上課，希望他們能順利通過考試。除了帶...\n",
+       "1  2018/7/15         18  7月開始是大四實習的第一個月，也帶了新人去上課，每天都約了客戶，閒暇的時間也有去內湖開發，內...\n",
+       "2  2018/7/22         18  7月開始是大四實習的第一個月，一樣每天都有行程，開發與見客戶。有客戶被抽到抽樣體檢，我帶著客..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,37 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#把\"year\"欄位的民國年轉成西元年\n",
-    "MetaData['year'] = MetaData.year.apply(lambda x: x + 1911)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#將年份欄位與開始日期合併\n",
-    "MetaData['artDate'] = MetaData['year'].apply(str) + '/' + MetaData['artDate']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#刪除\"year\"欄位\n",
-    "MetaData = MetaData.drop(\"year\", axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +595,7 @@
        "4  2021/01/02          1  經歷了聖誕節，接下來重點活動是春節了，春節禮盒、發糕，第一次知道我們原來有在做發糕，而且還有..."
       ]
      },
-     "execution_count": 16,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +754,7 @@
      "text": [
       "Building prefix dict from c:\\Users\\betty\\D\\資管所\\社群媒體分析\\期中專案\\dict\\dict.txt.big ...\n",
       "Loading model from cache C:\\Users\\betty\\AppData\\Local\\Temp\\jieba.u1113642acd0517a97f06c3927518a439.cache\n",
-      "Loading model cost 0.967 seconds.\n",
+      "Loading model cost 0.996 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -782,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -837,21 +820,21 @@
        "      <th>0</th>\n",
        "      <td>2020-12-05</td>\n",
        "      <td>1</td>\n",
-       "      <td>開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...</td>\n",
+       "      <td>開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...</td>\n",
        "      <td>本店</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-12-05</td>\n",
        "      <td>1</td>\n",
-       "      <td>開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...</td>\n",
+       "      <td>開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...</td>\n",
        "      <td>上班</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-12-05</td>\n",
        "      <td>1</td>\n",
-       "      <td>開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...</td>\n",
+       "      <td>開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...</td>\n",
        "      <td>別家</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -860,9 +843,9 @@
       ],
       "text/plain": [
        "     artDate  intern_id                                            content  \\\n",
-       "0 2020-12-05          1  開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...   \n",
-       "0 2020-12-05          1  開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...   \n",
-       "0 2020-12-05          1  開始在本店上班外還要去別家店支援每次支援的時候都只會想客群客人活動內容活動內容好難想啊品項只...   \n",
+       "0 2020-12-05          1  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...   \n",
+       "0 2020-12-05          1  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...   \n",
+       "0 2020-12-05          1  開始在本店上班外，還要去別家店支援，每次支援的時候都只會想客群、客人、活動內容，活動內容好難...   \n",
        "\n",
        "  word  \n",
        "0   本店  \n",
@@ -870,7 +853,7 @@
        "0   別家  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -912,34 +895,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18500</th>\n",
+       "      <th>19787</th>\n",
        "      <td>2019-05-01</td>\n",
        "      <td>工作</td>\n",
-       "      <td>104</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17182</th>\n",
+       "      <th>18462</th>\n",
        "      <td>2019-04-30</td>\n",
        "      <td>客人</td>\n",
        "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15349</th>\n",
+       "      <th>16618</th>\n",
        "      <td>2019-04-19</td>\n",
        "      <td>客人</td>\n",
-       "      <td>80</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18431</th>\n",
+       "      <th>19719</th>\n",
        "      <td>2019-05-01</td>\n",
        "      <td>客人</td>\n",
-       "      <td>70</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18454</th>\n",
-       "      <td>2019-05-01</td>\n",
-       "      <td>實習</td>\n",
-       "      <td>54</td>\n",
+       "      <th>10442</th>\n",
+       "      <td>2018-11-10</td>\n",
+       "      <td>客人</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -947,14 +930,14 @@
       ],
       "text/plain": [
        "         artDate word  size\n",
-       "18500 2019-05-01   工作   104\n",
-       "17182 2019-04-30   客人    91\n",
-       "15349 2019-04-19   客人    80\n",
-       "18431 2019-05-01   客人    70\n",
-       "18454 2019-05-01   實習    54"
+       "19787 2019-05-01   工作   101\n",
+       "18462 2019-04-30   客人    91\n",
+       "16618 2019-04-19   客人    81\n",
+       "19719 2019-05-01   客人    66\n",
+       "10442 2018-11-10   客人    52"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -986,10 +969,10 @@
        "1261    2019-04\n",
        "1261    2019-04\n",
        "1261    2019-04\n",
-       "Name: artMonth, Length: 50783, dtype: object"
+       "Name: artMonth, Length: 51266, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1033,34 +1016,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10943</th>\n",
+       "      <th>11758</th>\n",
        "      <td>2019-04</td>\n",
        "      <td>客人</td>\n",
-       "      <td>213</td>\n",
+       "      <td>214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7851</th>\n",
+       "      <th>8424</th>\n",
        "      <td>2018-12</td>\n",
        "      <td>客人</td>\n",
        "      <td>135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13373</th>\n",
-       "      <td>2019-05</td>\n",
+       "      <th>8499</th>\n",
+       "      <td>2018-12</td>\n",
        "      <td>工作</td>\n",
-       "      <td>116</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3468</th>\n",
+       "      <th>14184</th>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>工作</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3582</th>\n",
        "      <td>2018-09</td>\n",
        "      <td>客人</td>\n",
        "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>817</th>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>實習</td>\n",
-       "      <td>102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1068,14 +1051,14 @@
       ],
       "text/plain": [
        "      artMonth word  size\n",
-       "10943  2019-04   客人   213\n",
-       "7851   2018-12   客人   135\n",
-       "13373  2019-05   工作   116\n",
-       "3468   2018-09   客人   110\n",
-       "817    2018-07   實習   102"
+       "11758  2019-04   客人   214\n",
+       "8424   2018-12   客人   135\n",
+       "8499   2018-12   工作   128\n",
+       "14184  2019-05   工作   113\n",
+       "3582   2018-09   客人   110"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
