--- a/ver1.ipynb
+++ b/ver1.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "## 1. 資料前處理\n",
-    "處理實習生日誌的execel檔案，包含日期處理，加上員工編號。"
+    "處理實習生日誌的excel檔案，包含日期處理，加上員工編號。"
    ]
   },
   {
