--- a/ver1.ipynb
+++ b/ver1.ipynb
@@ -70,15 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "import matplotlib\n",
-    "import re\n",
-    "import jieba\n",
-    "import jieba.analyse\n",
-    "from datetime import datetime\n",
-    "from wordcloud import WordCloud "
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt \n",
+    "# import matplotlib\n",
+    "# import re\n",
+    "# import jieba\n",
+    "# import jieba.analyse\n",
+    "# from datetime import datetime\n",
+    "# from wordcloud import WordCloud "
    ]
   },
   {
