--- a/ver1.ipynb
+++ b/ver1.ipynb
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1307,
+   "execution_count": 1369,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
        "17    努力   positive   124"
       ]
      },
-     "execution_count": 1307,
+     "execution_count": 1369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3679,7 +3679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1356,
+   "execution_count": 1367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1357,
+   "execution_count": 1368,
    "metadata": {},
    "outputs": [
     {
@@ -3733,132 +3733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1358,
+   "execution_count": 1366,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>word</th>\n",
-       "      <th>word2</th>\n",
-       "      <th>n</th>\n",
-       "      <th>cor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>取錢</td>\n",
-       "      <td>領錢</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.847392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>算錯</td>\n",
-       "      <td>錢給</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.824386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>操作系統</td>\n",
-       "      <td>代號</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.803116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>領錢</td>\n",
-       "      <td>匯款</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.797964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>一點點</td>\n",
-       "      <td>得力助手</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.702294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>最常</td>\n",
-       "      <td>交易</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.688542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>交易</td>\n",
-       "      <td>算錯</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.669541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>排班</td>\n",
-       "      <td>爭議</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0.643652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>存摺</td>\n",
-       "      <td>功能</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.618218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>印象</td>\n",
-       "      <td>深刻</td>\n",
-       "      <td>55</td>\n",
-       "      <td>0.608877</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    word word2   n       cor\n",
-       "55    取錢    領錢  18  0.847392\n",
-       "39    算錯    錢給  18  0.824386\n",
-       "49  操作系統    代號  18  0.803116\n",
-       "56    領錢    匯款  18  0.797964\n",
-       "47   一點點  得力助手  18  0.702294\n",
-       "53    最常    交易  18  0.688542\n",
-       "38    交易    算錯  18  0.669541\n",
-       "22    排班    爭議  23  0.643652\n",
-       "58    存摺    功能  18  0.618218\n",
-       "2     印象    深刻  55  0.608877"
-      ]
-     },
-     "execution_count": 1358,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dia_df[dia_df[\"cor\"]>0.6].head(10).sort_values(by='cor', ascending=False)"
+    "# dia_df[dia_df[\"cor\"]>0.6].head(10).sort_values(by='cor', ascending=False)"
    ]
   },
   {
